--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "logistics",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "~1.15.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
