--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logistics",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt": "^1.0.2",
     "body-parser": "~1.15.2",
+    "ccap": "^0.6.10",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
