--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logistics",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -21,5 +21,9 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "babel-preset-env": "^1.1.8",
+    "babel-register": "^6.22.0"
   }
 }
